--- a/todos.html
+++ b/todos.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section class="mt-16 px-6" aria-label="Todos los productos">
-  <h2 class="text-2xl font-bold text-center mb-8">🛍️ Todos los productos</h2>
+  <h2 class="text-2xl font-bold text-center mb-8">Todos los productos</h2>
   
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
     {% for p in productos %}
