--- a/index.html
+++ b/index.html
@@ -24,19 +24,28 @@
 
     <main class="flex-grow">
         <section class="bg-gray-50 py-16 text-center px-4">
-            <div class="max-w-3xl mx-auto">
-                <img src="static/assets/logo-modaropa.png" onerror="this.style.display='none'" alt="ModaRopa Logo" class="mx-auto h-24 mb-6 object-contain">
-                <h1 class="text-4xl font-extrabold text-gray-900 mb-4">Tendencias de Moda 2025</h1>
-                <p class="text-gray-600 text-lg mb-8">Descubre la mejor ropa afiliada a Shein. Estilo, calidad y precio en un solo lugar.</p>
+            <div class="max-w-4xl mx-auto"> <img src="static/assets/logo-modaropa.png" onerror="this.style.display='none'" alt="ModaRopa Logo" class="mx-auto h-40 mb-6 object-contain">
+                
+                <h1 class="text-4xl font-extrabold text-gray-900 mb-6">MODAROPA</h1>
+                
+                <div class="text-gray-600 text-lg mb-8 leading-relaxed space-y-4 text-justify sm:text-center">
+                    <p>
+                        Somos <strong>MODAROPA</strong>, una pequeña tienda de ropa online afiliada a Shein, iniciada a <strong>finales de agosto de 2025</strong>. Curamos una selección de <strong>moda mujer</strong> y <strong>moda hombre</strong> con foco en <strong>tendencias 2025, vestidos, camisetas, pantalones, jeans, sudaderas, ropa deportiva, básicos, accesorios y tallas grandes</strong>.
+                    </p>
+                    <p>
+                        Nuestro objetivo es ayudarte a <strong>comprar ropa online</strong> de forma fácil y segura, con una cuidada relación <strong>calidad-precio, ofertas y rebajas</strong>. Usamos <strong>enlaces de afiliados</strong>, por lo que <em>precios, stock, envíos y devoluciones</em> se gestionan directamente en las tiendas afiliadas, con <strong>pago seguro y entrega rápida en España</strong>.
+                    </p>
+                </div>
+
                 <a href="catalogo.html" class="inline-block bg-black text-white px-8 py-3 rounded-lg font-bold uppercase hover:bg-gray-800 transition transform hover:scale-105">
-                    Ver Catálogo Completo
+                    Ver Catálogo
                 </a>
             </div>
         </section>
 
         <section class="max-w-7xl mx-auto px-4 py-12">
             <div class="flex items-center justify-between mb-8">
-                <h2 class="text-2xl font-bold border-l-4 border-pink-500 pl-4">Productos Destacados</h2>
+                <h2 class="text-2xl font-bold border-l-4 border-pink-500 pl-4">Algunos de nuestros productos</h2>
                 <a href="catalogo.html" class="text-pink-600 font-semibold hover:underline">Ver todos &rarr;</a>
             </div>
 
@@ -59,8 +68,10 @@
                 const container = document.getElementById('destacados-grid');
                 container.innerHTML = ''; // Limpiar loader
 
-                // Mostrar solo los primeros 5 productos como destacados
-                const destacados = data.slice(0, 5);
+                // 6. Aleatorizar productos al recargar
+                // Ordenamos el array de forma aleatoria antes de cortar los 5 primeros
+                const productosAleatorios = data.sort(() => 0.5 - Math.random());
+                const destacados = productosAleatorios.slice(0, 5);
 
                 destacados.forEach(p => {
                     // Manejo seguro de imagen
